syntax = "proto3";

package blog.api;

option go_package = ".;api";

// The account service definition.
service Account {
    // Get an account id by name, or get name by account id.
    rpc GetAccount(AccountRequest) returns (AccountResponse) {}
    // Get token by account name and password, return token string.
    rpc GetToken(AccountRequest) returns (AccountResponse) {}
    // Parse token by token string, return account id and name.
    rpc ParseToken(AccountRequest) returns (AccountResponse) {}
    // Register an account by name and password.
    rpc Register(AccountRequest) returns (AccountResponse) {}
}

// The request message containing the account's id, name and password.
message AccountRequest {
    uint32 id = 1;
    string name = 2;
    string password = 3;
    string token = 4;
}

// The response message containing the account's id, name and token.
message AccountResponse {
    uint32 id = 1;
    string name = 2;
    string token = 3;
}